--- a/src/form/p01-sales/form-lv2CustomerInvoice/form01-customerinvoice.component.html
+++ b/src/form/p01-sales/form-lv2CustomerInvoice/form01-customerinvoice.component.html
@@ -13,7 +13,7 @@
     <div class="col-12">  
         <mat-form-field class="col-12" appearance="fill">
             <mat-label>ID</mat-label>
-            <input [value]="currentSupplierInvoice.id" disabled matInput>
+            <input [value]="currentCustomerInvoice.id" disabled matInput>
         </mat-form-field>
 
         <mat-form-field class="col-12" appearance="fill">
@@ -34,9 +34,9 @@
             <!-- Position Column -->
         
             <!-- Name Column -->
-            <ng-container matColumnDef="supplierId">
+            <ng-container matColumnDef="customerId">
             <th mat-header-cell *matHeaderCellDef>Customer Name </th>
-            <td mat-cell *matCellDef="let element">  {{element.supplierId}} </td>
+            <td mat-cell *matCellDef="let element">  {{element.customerId}} </td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -91,14 +91,14 @@
         <div class="col-12">  
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>ID</mat-label>
-                <input [value]="currentSupplierInvoice.id" disabled matInput>
+                <input [value]="currentCustomerInvoice.id" disabled matInput>
             </mat-form-field>
 
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Select Customer</mat-label>
-                <mat-select [value]="currentSupplierInvoice.supplierId" (selectionChange)="supplierChange($event.value)">
-                    <div *ngFor="let i of supplierDropDown">
-                        <mat-option [value]="i.supplierId">{{i.supplierName}}</mat-option>
+                <mat-select [value]="currentCustomerInvoice.customerId" (selectionChange)="customerChange($event.value)">
+                    <div *ngFor="let i of customerDropDown">
+                        <mat-option [value]="i.customerId">{{i.customerName}}</mat-option>
                     </div>
                 </mat-select>
             </mat-form-field>
@@ -106,12 +106,12 @@
             <div>
                 <mat-form-field class="col-4" appearance="fill">
                     <mat-label>Invoice No</mat-label>
-                    <input [value]="currentSupplierInvoice.invoiceNo" (blur)="invoiceNoChange($event)" matInput>
+                    <input [value]="currentCustomerInvoice.invoiceNo" (blur)="invoiceNoChange($event)" matInput>
                 </mat-form-field>
                 
                 <mat-form-field class="col-4" appearance="fill">
                     <mat-label>Title</mat-label>
-                    <input [value]="currentSupplierInvoice.title" (blur)="titleChange($event)" matInput>
+                    <input [value]="currentCustomerInvoice.title" (blur)="titleChange($event)" matInput>
                 </mat-form-field>
 
                 <mat-form-field class="col-4" appearance="fill">
@@ -128,7 +128,7 @@
             <div>
                 <mat-form-field class="col-12" appearance="fill">
                     <mat-label>Description</mat-label>
-                    <textarea style="height: 150px;" [value]="currentSupplierInvoice.description" (blur)="descriptionChange($event)" matInput></textarea>
+                    <textarea style="height: 150px;" [value]="currentCustomerInvoice.description" (blur)="descriptionChange($event)" matInput></textarea>
                 </mat-form-field>      
             </div>
 
@@ -138,11 +138,11 @@
                     <button class="btn btn-danger" (click)="clear()">Clear</button>
                 </div>
 
-                <div class="ml-4" *ngIf="currentSupplierInvoice.id && currentSupplierInvoice.id != ''">
+                <div class="ml-4" *ngIf="currentCustomerInvoice.id && currentCustomerInvoice.id != ''">
                     <button class="btn btn-info" (click)="setSubpage('detail')" type="submit">{{ selectInvoiceDetail ===''?'Details':'Update'}}</button>
                 </div>
 
-                <div class="ml-4" *ngIf="currentSupplierInvoice.id == null || currentSupplierInvoice.id == ''">
+                <div class="ml-4" *ngIf="currentCustomerInvoice.id == null || currentCustomerInvoice.id == ''">
                     <button class="btn btn-info disabled" type="submit">Details</button>
                 </div>
             </div>
@@ -154,13 +154,13 @@
         <div class="col-12">
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Invoice No</mat-label>
-                <input [value]="currentSupplierInvoiceDetail.supplierInvoiceId" disabled matInput>
+                <input [value]="currentCustomerInvoiceDetail.customerInvoiceId" disabled matInput>
             </mat-form-field>
 
             <div>
                 <mat-form-field class="col-4" appearance="fill">
                     <mat-label>Select Product</mat-label>
-                    <mat-select [value]="currentSupplierInvoice.supplierId" (selectionChange)="productChange($event.value)">
+                    <mat-select [value]="currentCustomerInvoice.customerId" (selectionChange)="productChange($event.value)">
                         <div *ngFor="let i of productDropDown">
                             <mat-option [value]="i.productId">{{i.productName}}</mat-option>
                         </div>
@@ -169,12 +169,12 @@
                 
                 <mat-form-field class="col-4" appearance="fill">
                     <mat-label>Purchase Qty</mat-label>
-                    <input [value]="currentSupplierInvoiceDetail.purchaseQty" (blur)="purchaseQtyChange($event)" matInput>
+                    <input [value]="currentCustomerInvoiceDetail.saleQty" (blur)="saleQtyChange($event)" matInput>
                 </mat-form-field>
 
                 <mat-form-field class="col-4" appearance="fill">
                     <mat-label>Purchase Unit Price</mat-label>
-                    <input [value]="currentSupplierInvoiceDetail.purchaseUnitPrice" (blur)="purchaseUnitPriceChange($event)" matInput>
+                    <input [value]="currentCustomerInvoiceDetail.saleUnitPrice" (blur)="saleUnitPriceChange($event)" matInput>
                 </mat-form-field>
 
     
@@ -184,7 +184,7 @@
             <div>
                 <mat-form-field style="opacity: 0.01" class="col-12" appearance="fill">
                     <mat-label>Description</mat-label>
-                    <textarea disabled style="height: 150px;" [value]="currentSupplierInvoice.description" (blur)="descriptionChange($event)" matInput></textarea>
+                    <textarea disabled style="height: 150px;" [value]="currentCustomerInvoice.description" (blur)="descriptionChange($event)" matInput></textarea>
                 </mat-form-field>      
             </div>
 
@@ -211,9 +211,9 @@
                 <!-- Position Column -->
             
                 <!-- Name Column -->
-                <ng-container matColumnDef="supplierInvoiceId">
-                <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
-                <td mat-cell *matCellDef="let element">  {{element.supplierInvoiceId}} </td>
+                <ng-container matColumnDef="customerInvoiceId">
+                <th mat-header-cell *matHeaderCellDef>Customer Name </th>
+                <td mat-cell *matCellDef="let element">  {{element.customerInvoiceId}} </td>
                 </ng-container>
             
                 <!-- Weight Column -->
@@ -223,14 +223,14 @@
                 </ng-container>
             
                 <!-- Symbol Column -->
-                <ng-container matColumnDef="purchaseQty">
-                <th mat-header-cell *matHeaderCellDef> Purchase Qty </th>
-                <td mat-cell *matCellDef="let element"> {{element.purchaseQty}} </td>
+                <ng-container matColumnDef="saleQty">
+                <th mat-header-cell *matHeaderCellDef> Sale Qty </th>
+                <td mat-cell *matCellDef="let element"> {{element.saleQty}} </td>
                 </ng-container>
     
-                <ng-container matColumnDef="purchaseUnitPrice">
-                <th mat-header-cell *matHeaderCellDef> purchaseUnitPrice </th>
-                <td mat-cell *matCellDef="let element"> {{element.purchaseUnitPrice}} </td>
+                <ng-container matColumnDef="saleUnitPrice">
+                <th mat-header-cell *matHeaderCellDef> saleUnitPrice </th>
+                <td mat-cell *matCellDef="let element"> {{element.saleUnitPrice}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
