--- a/src/form/p01-sales/form-lv2CustomerInvoice/form01-customerinvoice.component.html
+++ b/src/form/p01-sales/form-lv2CustomerInvoice/form01-customerinvoice.component.html
@@ -36,7 +36,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="customerId">
             <th mat-header-cell *matHeaderCellDef>Customer Name </th>
-            <td mat-cell *matCellDef="let element">  {{element.customerId}} </td>
+            <td mat-cell *matCellDef="let element">  {{getName(element.customerId, 'customer')}} </td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -211,15 +211,15 @@
                 <!-- Position Column -->
             
                 <!-- Name Column -->
-                <ng-container matColumnDef="customerInvoiceId">
-                <th mat-header-cell *matHeaderCellDef>Customer Name </th>
-                <td mat-cell *matCellDef="let element">  {{element.customerInvoiceId}} </td>
+                <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>Invoice Detaial </th>
+                <td mat-cell *matCellDef="let element">  {{element.id}} </td>
                 </ng-container>
             
                 <!-- Weight Column -->
                 <ng-container matColumnDef="productId">
-                <th mat-header-cell *matHeaderCellDef> Product Id </th>
-                <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
+                <th mat-header-cell *matHeaderCellDef> Product</th>
+                <td mat-cell *matCellDef="let element"> {{getName(element.productId, 'product')}} </td>
                 </ng-container>
             
                 <!-- Symbol Column -->
