--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -36,7 +36,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="supplierId">
             <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
-            <td mat-cell *matCellDef="let element">  {{element.supplierId}} </td>
+            <td mat-cell *matCellDef="let element">  {{getName(element.supplierId, 'supplier')}} </td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -212,14 +212,14 @@
             
                 <!-- Name Column -->
                 <ng-container matColumnDef="supplierInvoiceId">
-                <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
+                <th mat-header-cell *matHeaderCellDef>Invoice Details </th>
                 <td mat-cell *matCellDef="let element">  {{element.supplierInvoiceId}} </td>
                 </ng-container>
             
                 <!-- Weight Column -->
                 <ng-container matColumnDef="productId">
-                <th mat-header-cell *matHeaderCellDef> Product Id </th>
-                <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
+                <th mat-header-cell *matHeaderCellDef> Product </th>
+                <td mat-cell *matCellDef="let element"> {{getName(element.productId, 'product')}} </td>
                 </ng-container>
             
                 <!-- Symbol Column -->
