--- a/src/form/p01-sales/form-lv3CustomerPayment/form01-payment.component.html
+++ b/src/form/p01-sales/form-lv3CustomerPayment/form01-payment.component.html
@@ -37,7 +37,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="customerId">
             <th mat-header-cell *matHeaderCellDef>Customer Name </th>
-            <td mat-cell *matCellDef="let element">  {{element.customerId}} </td>
+            <td mat-cell *matCellDef="let element"> {{getName(element.customerId, 'customer')}}</td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -177,7 +177,7 @@
             
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="saleQty">
-                <th mat-header-cell *matHeaderCellDef> Purchase Qty </th>
+                <th mat-header-cell *matHeaderCellDef> Sale Qty </th>
                 <td mat-cell *matCellDef="let element"> {{element.saleQty}} </td>
                 </ng-container>
     
