--- a/src/form/p03-purchase/form-lv3SupplierPayment/form03-payment.component.html
+++ b/src/form/p03-purchase/form-lv3SupplierPayment/form03-payment.component.html
@@ -37,7 +37,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="supplierId">
             <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
-            <td mat-cell *matCellDef="let element">  {{element.supplierId}} </td>
+            <td mat-cell *matCellDef="let element"> {{getName(element.supplierId, 'supplier')}} </td>
             </ng-container>
         
             <!-- Weight Column -->
