--- a/src/pages/p07-transactions/p07-transactions.component.html
+++ b/src/pages/p07-transactions/p07-transactions.component.html
@@ -1,4 +1,4 @@
 <p>p07-transactions works!</p>
-<app-draggable [accList]="accList"></app-draggable>
+<app-draggable [accList]="accList" [accFilter]="accFilter"></app-draggable>
 
 <router-outlet></router-outlet>
