--- a/src/pages/p07-transactions/p07-transactions.component.html
+++ b/src/pages/p07-transactions/p07-transactions.component.html
@@ -1,4 +1,5 @@
-<p>p07-transactions works!</p>
-<app-draggable [accList]="accList" [accFilter]="accFilter"></app-draggable>
+<div class="d-flex justify-content-center">
+    <app-draggable [accList]="accList" [accFilter]="accFilter"></app-draggable>
+</div>
 
 <router-outlet></router-outlet>
