--- a/src/components/draggable/draggable.component.css
+++ b/src/components/draggable/draggable.component.css
@@ -6,7 +6,6 @@
     cursor: move;
     display: inline-flex;
     justify-content: center;
-    align-items: center;
     text-align: center;
     background: #fff;
     border-radius: 4px;
@@ -30,7 +29,9 @@
   .example-boundary {
     width: 80vw;
     height: 80vh;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: dotted #ccc 2px;
   }
   
